cmake_minimum_required (VERSION 2.8)
project (gloo)
set(CMAKE_CXX_FLAGS "-Wall -std=c++11 -m64 -O3")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-deprecated-register")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -funroll-loops")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-narrowing")
find_package (OpenGL REQUIRED)
find_package (GLEW REQUIRED)
find_package (glfw3 3.2 REQUIRED)
include_directories(include)
add_subdirectory(src)

